feat: Add TypeScript preset to Babel
Enable Babel to transpile TypeScript code directly within the script tag by adding the 'react' and 'typescript' presets. This simplifies the build process for frontend components.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
   <body class="font-domine">
     <div id="root"></div>
     <!-- Changed script type to let Babel transpile it before execution -->
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="/index.tsx"></script>
   </body>
 </html>
